--- a/CTFd/themes/core/templates/components/navbar.html
+++ b/CTFd/themes/core/templates/components/navbar.html
@@ -9,7 +9,13 @@
             height="25"
         >
       {% else %}
-        {{ Configs.ctf_name }}
+        <img
+            class="img-responsive ctf_logo"
+            src="{{ url_for('views.themes', path='img/logo.png') }}"
+            alt="Teck-Vision"
+            height="28"
+            style="margin-right: 8px;"
+        >
       {% endif %}
     </a>
 
