--- a/CTFd/themes/core/templates/base.html
+++ b/CTFd/themes/core/templates/base.html
@@ -60,6 +60,7 @@
 </footer>
 
 {% include "components/notifications.html" %}
+{% include "components/confetti.html" %}
 
 {% block scripts %}
   {{ Assets.js("assets/js/page.js") }}
